v1.4/_sources/api/generated/metpy.plots.FilledContourPlot.rst.txt
FilledContourPlot
=============================

.. currentmodule:: metpy.plots

.. autoclass:: FilledContourPlot

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~FilledContourPlot.clabels
      ~FilledContourPlot.colorbar
      ~FilledContourPlot.colorbar_fontsize
      ~FilledContourPlot.colormap
      ~FilledContourPlot.contours
      ~FilledContourPlot.cross_validation_lock
      ~FilledContourPlot.data
      ~FilledContourPlot.field
      ~FilledContourPlot.griddata
      ~FilledContourPlot.image_range
      ~FilledContourPlot.label_fontsize
      ~FilledContourPlot.latitude
      ~FilledContourPlot.level
      ~FilledContourPlot.longitude
      ~FilledContourPlot.name
      ~FilledContourPlot.parent
      ~FilledContourPlot.plot_units
      ~FilledContourPlot.plotdata
      ~FilledContourPlot.scale
      ~FilledContourPlot.smooth_contour
      ~FilledContourPlot.smooth_field
      ~FilledContourPlot.time
      ~FilledContourPlot.x
      ~FilledContourPlot.y

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~FilledContourPlot.__init__
      ~FilledContourPlot.add_traits
      ~FilledContourPlot.class_own_trait_events
      ~FilledContourPlot.class_own_traits
      ~FilledContourPlot.class_trait_names
      ~FilledContourPlot.class_traits
      ~FilledContourPlot.clear
      ~FilledContourPlot.clear_collections
      ~FilledContourPlot.clear_handle
      ~FilledContourPlot.copy
      ~FilledContourPlot.draw
      ~FilledContourPlot.has_trait
      ~FilledContourPlot.hold_trait_notifications
      ~FilledContourPlot.notify_change
      ~FilledContourPlot.observe
      ~FilledContourPlot.on_trait_change
      ~FilledContourPlot.set_trait
      ~FilledContourPlot.setup_instance
      ~FilledContourPlot.trait_defaults
      ~FilledContourPlot.trait_events
      ~FilledContourPlot.trait_has_value
      ~FilledContourPlot.trait_metadata
      ~FilledContourPlot.trait_names
      ~FilledContourPlot.trait_values
      ~FilledContourPlot.traits
      ~FilledContourPlot.unobserve
      ~FilledContourPlot.unobserve_all

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: clabels
   .. autoattribute:: colorbar
   .. autoattribute:: colorbar_fontsize
   .. autoattribute:: colormap
   .. autoattribute:: contours
   .. autoattribute:: cross_validation_lock
   .. autoattribute:: data
   .. autoattribute:: field
   .. autoattribute:: griddata
   .. autoattribute:: image_range
   .. autoattribute:: label_fontsize
   .. autoattribute:: latitude
   .. autoattribute:: level
   .. autoattribute:: longitude
   .. autoattribute:: name
   .. autoattribute:: parent
   .. autoattribute:: plot_units
   .. autoattribute:: plotdata
   .. autoattribute:: scale
   .. autoattribute:: smooth_contour
   .. autoattribute:: smooth_field
   .. autoattribute:: time
   .. autoattribute:: x
   .. autoattribute:: y

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: __init__
   .. automethod:: add_traits
   .. automethod:: class_own_trait_events
   .. automethod:: class_own_traits
   .. automethod:: class_trait_names
   .. automethod:: class_traits
   .. automethod:: clear
   .. automethod:: clear_collections
   .. automethod:: clear_handle
   .. automethod:: copy
   .. automethod:: draw
   .. automethod:: has_trait
   .. automethod:: hold_trait_notifications
   .. automethod:: notify_change
   .. automethod:: observe
   .. automethod:: on_trait_change
   .. automethod:: set_trait
   .. automethod:: setup_instance
   .. automethod:: trait_defaults
   .. automethod:: trait_events
   .. automethod:: trait_has_value
   .. automethod:: trait_metadata
   .. automethod:: trait_names
   .. automethod:: trait_values
   .. automethod:: traits
   .. automethod:: unobserve
   .. automethod:: unobserve_all

   
   

.. include:: metpy.plots.FilledContourPlot.examples

.. raw:: html

     <div style='clear:both'></div>